service-meshes/deployment.yaml
# Echo Server: an application that allows a client and a server to connect so a client can send a message to the server
# and the server can receive the message and send, or echo, it back to the client
# testing connection, L4 with TCP/UDP

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver-v1
  labels:
    app: echoserver
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver
      version: v1
  template:
    metadata:
      labels:
        app: echoserver
        version: v1
    spec:
      containers:
      - name: echoserver
        image: gcr.io/google_containers/echoserver:1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
